Added tooltip for instructions

--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
 
   <nav>
       <div class="nav-wrapper">
-        <a href="#!" class="pixel"> Pixel Art!🤪</a>
+        <a href="/" class="pixel"> Pixel Art!🤪</a>
+
         <ul class="right hide-on-med-and-down">
             <li><a class="waves-effect waves-light btn" id="eraser">Reset</input>
               <i class="material-icons right" >delete_forever</i></a></li>
+              <a class="btn tooltipped" data-position="bottom" data-tooltip="Press any key to Stop/Resume Painting">
+                  <i class="material-icons" >info_outline
+                    </i>
+              </a>
             <li><a class="waves-effect waves-light btn"> <input type="color" id="color-field"></input>
        <i class="material-icons right">format_paint</i></a></li>
         </ul>
